<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2d7d5"
    tools:context=".GroupActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e8daef"
        android:text="@string/types_of_elements"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/alkali_metal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"
        android:text="@string/alkali_metals"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/alkaline_earth_metal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"
        android:text="@string/alkaline_earth_metal"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/transition_metal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"
        android:text="@string/transition_metals"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/others_metal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"
        android:text="Others metals"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/other_non_metal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"
        android:text="@string/other_nonmetals"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/halogens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"
        android:text="Halogens"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/noble_gases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"
        android:text="@string/nobles_gases"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/rare_earth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"
        android:text="@string/rare_earth_elements_and_lanthanoid_elements"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/actinoid_elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"
        android:text="@string/acrinoid_elements"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"/>

</LinearLayout>